--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,5 @@
-#Fri Jan 31 15:16:08 CET 2020
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.0-rc-3-all.zip
+#Sun Feb 02 15:45:22 CET 2020
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.1.1-all.zip
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
